# polymarket-prediction

./: .env.example  .gitignore  FLOW.md  README.md  pyproject.toml
.agent/brain/: FLOW.md  implementation_plan.md  task.md  walkthrough.md
.agent/workflows/: run-project.md
frontend/: app.js  index.html  style.css  test.html
scripts/: export_historical_data.py  google_httpx.html  google_patch.html  run_backtest.py  run_real_backtest.py  test_ddg.py  test_google.py  test_gs.py  test_html.py  test_httpx_google.py  test_patch.py  test_patch_html.py  try_predictor.py  try_researcher.py  try_scanner.py
src/predict_market_bot/: __init__.py  api.py  orchestrator.py
src/predict_market_bot/config/: settings.py
src/predict_market_bot/core/: formulas.py  models.py
src/predict_market_bot/knowledge/: store.py
src/predict_market_bot/pipeline/: backtester.py  compounder.py  executor.py  fetcher.py  mocks.py  predictor.py  researcher.py  risk_manager.py  scanner.py
src/predict_market_bot/utils/: logger.py  metrics.py
tests/: test_formulas.py  test_orchestrator.py  test_predictor.py  test_researcher.py  test_risk_manager.py  test_scanner.py
