[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predict-market-bot"
version = "1.0.0"
description = "Prediction Market analysis, forecasting & execution bot with risk controls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "truonglx1" }]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "xgboost>=2.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "textblob>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
predict-bot = "predict_market_bot.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/predict_market_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
